--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,5 +1,330 @@
+@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,400italic");
 body {
-  background: red;
-  font-size: 14px;
-  float: right;
-  color: black; }
+  font-family: "Source Sans Pro", Helvetica, sans-serif;
+  letter-spacing: 1px; }
+  body h1, body h2 {
+    font-weight: 300;
+    text-transform: uppercase;
+    color: white; }
+  body h1, body nav h1 {
+    font-size: 0.9em;
+    color: white; }
+  body h2 {
+    font-size: 0.8em; }
+  body p {
+    font-weight: 100; }
+  body nav {
+    color: #a0a0a1;
+    background-color: #1f2224;
+    position: absolute;
+    right: 0;
+    left: 0; }
+    body nav .nav-headings {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+      padding: 15px 10px;
+      position: relative; }
+      body nav .nav-headings h1 span {
+        margin-left: 10px;
+        color: #a0a0a1; }
+      body nav .nav-headings h1:last-child {
+        cursor: pointer; }
+    body nav .dropdown-display {
+      -webkit-transform: translateY(0);
+              transform: translateY(0); }
+    body nav .dropdown {
+      display: block;
+      -webkit-transition: all 1s;
+      transition: all 1s;
+      background-color: #242629;
+      padding: 3em 2em 2em 2em;
+      position: relative;
+      max-height: 60vh;
+      overflow: scroll;
+      -webkit-transform: translateY(-100vh);
+              transform: translateY(-100vh); }
+      body nav .dropdown .close {
+        position: absolute;
+        top: 0;
+        right: 0;
+        opacity: 0.25;
+        cursor: pointer;
+        background-size: 2.5em;
+        background: url("../../public/assets/close.svg") left top no-repeat;
+        height: 5em;
+        width: 5em;
+        transition: opacity 0.2s ease-in-out;
+        -webkit-transition: opacity 0.2s ease-in-out;
+        -ms-transition: opacity 0.2s ease-in-out;
+        z-index: 2; }
+        body nav .dropdown .close:hover {
+          opacity: 1; }
+      body nav .dropdown .social {
+        margin: 25px 0; }
+        body nav .dropdown .social a {
+          text-decoration: none; }
+        body nav .dropdown .social i {
+          margin-right: 15px;
+          font-size: 1.4rem;
+          color: #505051; }
+      body nav .dropdown p {
+        line-height: 1.5em; }
+      body nav .dropdown form input, body nav .dropdown form button, body nav .dropdown form textarea {
+        -webkit-box-sizing: border-box;
+                box-sizing: border-box;
+        width: 100%;
+        -webkit-appearance: none;
+           -moz-appearance: none;
+                appearance: none;
+        border: 0;
+        padding: 10px;
+        margin: 8px 0; }
+      body nav .dropdown form input:not([type="submit"]), body nav .dropdown form textarea {
+        background-color: #34363b; }
+      body nav .dropdown form ::-webkit-input-placeholder {
+        color: #707071;
+        font-weight: 100;
+        font-family: "Source Sans Pro", Helvetica, sans-serif; }
+      body nav .dropdown form ::-moz-placeholder {
+        color: #707071;
+        font-weight: 100;
+        font-family: "Source Sans Pro", Helvetica, sans-serif; }
+      body nav .dropdown form :-ms-input-placeholder {
+        color: #707071;
+        font-weight: 100;
+        font-family: "Source Sans Pro", Helvetica, sans-serif; }
+      body nav .dropdown form input[type="submit"], body nav .dropdown form button {
+        background-color: transparent;
+        color: white;
+        font-weight: 100;
+        font-family: "Source Sans Pro", Helvetica, sans-serif;
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        font-size: 14px;
+        cursor: pointer; }
+      body nav .dropdown form input[type="submit"] {
+        background-color: #34a58e; }
+      body nav .dropdown form button {
+        -webkit-box-shadow: inset 0 0 0 2px #36383c;
+                box-shadow: inset 0 0 0 2px #36383c; }
+  body main div {
+    border: 1px solid red; }
+  body main .main-first {
+    background: url(images/img1-min.jpg);
+    background-size: contain;
+    background-repeat: no-repeat; }
+  body main .main-second {
+    background: url(images/img2-min.jpg);
+    background-size: contain;
+    background-repeat: no-repeat; }
+  body main .main-third {
+    background: url(images/img3-min.jpg);
+    background-size: contain;
+    background-repeat: no-repeat; }
+  body main .main-fourth {
+    background: url(images/img4-min.jpg);
+    background-size: contain;
+    background-repeat: no-repeat; }
+  body main .main-fifth {
+    background: url(images/img5-min.jpg);
+    background-size: contain;
+    background-repeat: no-repeat; }
+  body main .main-sixth {
+    background: url(images/img6-min.jpg);
+    background-size: contain;
+    background-repeat: no-repeat; }
+  body main .main-seventh {
+    background: url(images/img7-min.jpg);
+    background-size: contain;
+    background-repeat: no-repeat; }
+  body main .main-eighth {
+    background: url(images/img8-min.jpg);
+    background-size: contain;
+    background-repeat: no-repeat; }
+  body main .main-ninth {
+    background: url(images/img9-min.jpg);
+    background-size: contain;
+    background-repeat: no-repeat; }
+  body main .main-tenth {
+    background: url(images/img10-min.jpg);
+    background-size: contain;
+    background-repeat: no-repeat; }
+  body main .main-eleventh {
+    background: url(images/img11-min.jpg);
+    background-size: contain;
+    background-repeat: no-repeat; }
+  body main .main-twelfth {
+    background: url(images/img12-min.jpg);
+    background-size: contain;
+    background-repeat: no-repeat; }
+
+/*! normalize.css v5.0.0 | MIT License | github.com/necolas/normalize.css */
+html {
+  font-family: sans-serif;
+  line-height: 1.15;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%; }
+
+body {
+  margin: 0; }
+
+article, aside, footer, header, nav, section {
+  display: block; }
+
+h1 {
+  font-size: 2em;
+  margin: .67em 0; }
+
+figcaption, figure, main {
+  display: block; }
+
+figure {
+  margin: 1em 40px; }
+
+hr {
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
+  height: 0;
+  overflow: visible; }
+
+pre {
+  font-family: monospace,monospace;
+  font-size: 1em; }
+
+a {
+  background-color: transparent;
+  -webkit-text-decoration-skip: objects; }
+
+a:active, a:hover {
+  outline-width: 0; }
+
+abbr[title] {
+  border-bottom: none;
+  text-decoration: underline;
+  text-decoration: underline dotted; }
+
+b, strong {
+  font-weight: inherit; }
+
+b, strong {
+  font-weight: bolder; }
+
+code, kbd, samp {
+  font-family: monospace,monospace;
+  font-size: 1em; }
+
+dfn {
+  font-style: italic; }
+
+mark {
+  background-color: #ff0;
+  color: #000; }
+
+small {
+  font-size: 80%; }
+
+sub, sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline; }
+
+sub {
+  bottom: -.25em; }
+
+sup {
+  top: -.5em; }
+
+audio, video {
+  display: inline-block; }
+
+audio:not([controls]) {
+  display: none;
+  height: 0; }
+
+img {
+  border-style: none; }
+
+svg:not(:root) {
+  overflow: hidden; }
+
+button, input, optgroup, select, textarea {
+  font-family: sans-serif;
+  font-size: 100%;
+  line-height: 1.15;
+  margin: 0; }
+
+button, input {
+  overflow: visible; }
+
+button, select {
+  text-transform: none; }
+
+button, html [type=button], [type=reset], [type=submit] {
+  -webkit-appearance: button; }
+
+button::-moz-focus-inner, [type=button]::-moz-focus-inner, [type=reset]::-moz-focus-inner, [type=submit]::-moz-focus-inner {
+  border-style: none;
+  padding: 0; }
+
+button:-moz-focusring, [type=button]:-moz-focusring, [type=reset]:-moz-focusring, [type=submit]:-moz-focusring {
+  outline: 1px dotted ButtonText; }
+
+fieldset {
+  border: 1px solid silver;
+  margin: 0 2px;
+  padding: .35em .625em .75em; }
+
+legend {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  color: inherit;
+  display: table;
+  max-width: 100%;
+  padding: 0;
+  white-space: normal; }
+
+progress {
+  display: inline-block;
+  vertical-align: baseline; }
+
+textarea {
+  overflow: auto; }
+
+[type=checkbox], [type=radio] {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 0; }
+
+[type=number]::-webkit-inner-spin-button, [type=number]::-webkit-outer-spin-button {
+  height: auto; }
+
+[type=search] {
+  -webkit-appearance: textfield;
+  outline-offset: -2px; }
+
+[type=search]::-webkit-search-cancel-button, [type=search]::-webkit-search-decoration {
+  -webkit-appearance: none; }
+
+::-webkit-file-upload-button {
+  -webkit-appearance: button;
+  font: inherit; }
+
+details, menu {
+  display: block; }
+
+summary {
+  display: list-item; }
+
+canvas {
+  display: inline-block; }
+
+template {
+  display: none; }
+
+[hidden] {
+  display: none; }
